--- a/oxxo/scss/style.scss
+++ b/oxxo/scss/style.scss
@@ -50,18 +50,41 @@ span {
   }
 }
 
-.section__title {
-  color: $primary-color;
-  font-weight: bolder;
-  font-size: 2em;
-  text-align: center;
-  position: relative;
-  &::after {
-    content: '';
-    position: absolute;
-    width: 15rem;
-    height: 2px;
-    background-color: $primary-color;
+.section {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 5rem;
+
+  .section__title {
+    width: 50%;
+
+    .section__header {
+      color: $primary-color;
+      font-weight: bolder;
+      font-size: 2.5em;
+      margin-top: 1em;
+      text-align: center;
+      text-transform: uppercase;
+      position: relative;
+
+      &::after {
+        content: '';
+        position: absolute;
+        bottom: -0.6rem;
+        width: 12rem;
+        left: 50%;
+        margin-left: -6rem;
+        height: 2px;
+        background-color: $primary-color;
+      }
+    }
+
+    .section__subheader {
+      margin: 2.5rem 0 4rem;
+      text-align: center;
+    }
   }
 }
 
@@ -239,6 +262,59 @@ span {
 
     .header-greeting__btn {
       margin-top: 3rem;
+    }
+  }
+}
+
+.about {
+  margin: 0 4rem;
+
+  .about-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    .about-content__img {
+      width: 45%;
+      height: 95%;
+      box-shadow: 0 15px 15px 5px $primary-color;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .about-content__text {
+      width: 50%;
+
+      .about-content__title {
+        font-size: 1.5em;
+        font-weight: 600;
+      }
+
+      .about-content__description {
+        .about-content__paragraph {
+          margin-top: 1.3em;
+
+          &:last-child {
+            font-style: italic;
+          }
+        }
+      }
+
+      .about-content__buttons {
+        margin-top: 3rem;
+
+        .about-btn {
+          color: $secondary-color;
+          border: 1px solid $secondary-color;
+          margin-right: 25px;
+
+          &:hover {
+            color: #fff;
+          }
+        }
+      }
     }
   }
 }
