--- a/oxxo/css/style.css
+++ b/oxxo/css/style.css
@@ -52,15 +52,15 @@ span {
     .section .section__title .section__header {
       color: #666666;
       font-weight: bolder;
+      margin-top: 2em;
       font-size: 2.5em;
-      margin-top: 1em;
       text-align: center;
       text-transform: uppercase;
       position: relative; }
       .section .section__title .section__header::after {
         content: '';
         position: absolute;
-        bottom: -0.6rem;
+        bottom: -0.8rem;
         width: 12rem;
         left: 50%;
         margin-left: -6rem;
@@ -214,5 +214,156 @@ span {
           margin-right: 25px; }
           .about .about-content .about-content__text .about-content__buttons .about-btn:hover {
             color: #fff; }
+
+.amazing {
+  background: url("../img/amazing.png");
+  background-position: center;
+  background-size: cover; }
+  .amazing .section__title .section__header {
+    color: #fff; }
+    .amazing .section__title .section__header::after {
+      background-color: #fff; }
+  .amazing .section__title .section__subheader {
+    color: #fff; }
+  .amazing .amazing-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 90%; }
+    .amazing .amazing-content .amazing-content__item {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      width: 30%;
+      margin: 2.5rem 0; }
+      .amazing .amazing-content .amazing-content__item .amazing-content__icon {
+        font-size: 2.5em;
+        margin-right: 1em;
+        color: #ff7200; }
+      .amazing .amazing-content .amazing-content__item .amazing-content__text .amazing-content__header {
+        font-size: 1.1em;
+        text-transform: uppercase;
+        font-weight: 600;
+        color: #fff; }
+      .amazing .amazing-content .amazing-content__item .amazing-content__text .amazing-content__subheader {
+        color: #fff;
+        font-weight: 300;
+        text-align: justify; }
+
+.team {
+  padding-bottom: 3rem; }
+  .team .team__list {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: nowrap; }
+    .team .team__list .team-item {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 20%; }
+      .team .team__list .team-item .team-item__photo {
+        width: 100%; }
+      .team .team__list .team-item .team-item__name {
+        margin: 1em 0; }
+        .team .team__list .team-item .team-item__name .team-item__post {
+          color: #ff7200;
+          font-weight: 600; }
+          .team .team__list .team-item .team-item__name .team-item__post::before {
+            content: '/ '; }
+      .team .team__list .team-item .team-item__description {
+        text-align: justify; }
+      .team .team__list .team-item .team-item__social {
+        display: flex;
+        align-items: center;
+        margin-top: 1rem; }
+        .team .team__list .team-item .team-item__social .team-item__scnetw {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          border-radius: 50%;
+          width: 2.5em;
+          height: 2.5em;
+          background-color: #f0f0f0;
+          margin-right: 1.3em;
+          transition: 0.3s; }
+          .team .team__list .team-item .team-item__social .team-item__scnetw:last-child {
+            margin-right: 0; }
+          .team .team__list .team-item .team-item__social .team-item__scnetw .team-item__link i {
+            font-size: 1.3em; }
+          .team .team__list .team-item .team-item__social .team-item__scnetw:hover {
+            background-color: #ff7200; }
+            .team .team__list .team-item .team-item__social .team-item__scnetw:hover .team-item__link i {
+              color: #fff; }
+
+.portfolio .portfolio-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: flex-end; }
+  .portfolio .portfolio-content .portfolio-content__item {
+    width: 25%;
+    height: 250px;
+    position: relative; }
+    .portfolio .portfolio-content .portfolio-content__item .portfolio-content__img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      transition: 0.5s; }
+    .portfolio .portfolio-content .portfolio-content__item .portfolio-content__icons {
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      display: none;
+      width: 100%;
+      top: 30%;
+      margin-top: -25px; }
+      .portfolio .portfolio-content .portfolio-content__item .portfolio-content__icons .icon-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;
+        border: 3px solid #f0f0f0;
+        border-radius: 50%;
+        margin-right: 20px; }
+        .portfolio .portfolio-content .portfolio-content__item .portfolio-content__icons .icon-container i {
+          color: #f0f0f0;
+          font-size: 1.5em; }
+        .portfolio .portfolio-content .portfolio-content__item .portfolio-content__icons .icon-container:hover {
+          background-color: #f0f0f0; }
+          .portfolio .portfolio-content .portfolio-content__item .portfolio-content__icons .icon-container:hover i {
+            color: #ff7200; }
+    .portfolio .portfolio-content .portfolio-content__item .portfolio-content__description {
+      position: absolute;
+      display: none;
+      height: 35%;
+      width: 100%;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: #f0f0f0; }
+      .portfolio .portfolio-content .portfolio-content__item .portfolio-content__description .portfolio-content__title {
+        font-size: 1.5em;
+        margin-top: 0.5em;
+        text-align: center;
+        color: #363636; }
+      .portfolio .portfolio-content .portfolio-content__item .portfolio-content__description .portfolio-content__kind {
+        text-align: center;
+        text-transform: uppercase;
+        margin-top: 0.3em;
+        font-size: 1.2em;
+        color: #666666; }
+    .portfolio .portfolio-content .portfolio-content__item:hover {
+      cursor: pointer; }
+      .portfolio .portfolio-content .portfolio-content__item:hover .portfolio-content__img {
+        filter: brightness(0.7); }
+      .portfolio .portfolio-content .portfolio-content__item:hover .portfolio-content__icons {
+        display: flex; }
+      .portfolio .portfolio-content .portfolio-content__item:hover .portfolio-content__description {
+        display: block; }
 
 /*# sourceMappingURL=style.css.map */
