--- a/oxxo/css/style.css
+++ b/oxxo/css/style.css
@@ -483,7 +483,8 @@ ul {
 
 .howwedo .howwedo-content {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+  padding-bottom: 5rem; }
   .howwedo .howwedo-content .howwedo-content__picture {
     width: 40%;
     max-width: 40%; }
@@ -512,5 +513,186 @@ ul {
           margin-bottom: 1em; }
       .howwedo .howwedo-content .howwedo-content__list .howwedo-content__item:first-child {
         margin-top: 0; }
+
+.contacts {
+  background-color: #303030; }
+  .contacts .contacts-content {
+    padding-bottom: 2rem;
+    width: 90%;
+    color: #fff;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start; }
+    .contacts .contacts-content .contacts-content__item {
+      width: 20%;
+      margin-top: 2rem; }
+      .contacts .contacts-content .contacts-content__item .contacts-content__title {
+        color: #fff;
+        font-size: 1.5em;
+        margin-bottom: 1em;
+        text-transform: capitalize; }
+        .contacts .contacts-content .contacts-content__item .contacts-content__title i {
+          margin-right: 0.5em; }
+      .contacts .contacts-content .contacts-content__item .contact-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center; }
+        .contacts .contacts-content .contacts-content__item .contact-info .contact-info__subtitle {
+          margin-top: 1em;
+          font-size: 0.9em;
+          color: #fff; }
+        .contacts .contacts-content .contacts-content__item .contact-info .contact-info__adress {
+          color: #fff;
+          margin-top: 1em; }
+          .contacts .contacts-content .contacts-content__item .contact-info .contact-info__adress span {
+            color: #fff;
+            display: block; }
+          .contacts .contacts-content .contacts-content__item .contact-info .contact-info__adress .contact-info__street {
+            color: #acabab; }
+        .contacts .contacts-content .contacts-content__item .contact-info .contact-info__phone {
+          margin-top: 1em; }
+          .contacts .contacts-content .contacts-content__item .contact-info .contact-info__phone span {
+            color: #fff;
+            display: block; }
+          .contacts .contacts-content .contacts-content__item .contact-info .contact-info__phone .contact-info__number {
+            color: #acabab; }
+        .contacts .contacts-content .contacts-content__item .contact-info .contact-info__mail {
+          margin-top: 1em; }
+          .contacts .contacts-content .contacts-content__item .contact-info .contact-info__mail span {
+            display: block;
+            color: #fff; }
+          .contacts .contacts-content .contacts-content__item .contact-info .contact-info__mail .contact-info__mailadr {
+            color: #acabab; }
+        .contacts .contacts-content .contacts-content__item .contact-info .contact-info__social {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+          margin-top: 1em; }
+          .contacts .contacts-content .contacts-content__item .contact-info .contact-info__social .contact-info__icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1em;
+            width: 2.5em;
+            height: 2.5em;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            cursor: pointer; }
+            .contacts .contacts-content .contacts-content__item .contact-info .contact-info__social .contact-info__icon .contact-info__link i {
+              font-size: 1.3em;
+              color: #fff; }
+            .contacts .contacts-content .contacts-content__item .contact-info .contact-info__social .contact-info__icon:hover {
+              border: 1px solid #ff7200; }
+              .contacts .contacts-content .contacts-content__item .contact-info .contact-info__social .contact-info__icon:hover .contact-info__link i {
+                color: #ff7200; }
+      .contacts .contacts-content .contacts-content__item .latest-post__item {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-top: 1em; }
+        .contacts .contacts-content .contacts-content__item .latest-post__item .latest-post__img {
+          width: 45%;
+          margin-right: 1em;
+          display: block; }
+        .contacts .contacts-content .contacts-content__item .latest-post__item .latest-post__title {
+          color: #fff;
+          margin-bottom: 0.5em;
+          text-transform: capitalize; }
+        .contacts .contacts-content .contacts-content__item .latest-post__item .latest-post__subtitle {
+          color: #acabab;
+          font-size: 0.9em; }
+        .contacts .contacts-content .contacts-content__item .latest-post__item .latest-post__date {
+          color: #ff7200;
+          margin-top: 0.5em; }
+      .contacts .contacts-content .contacts-content__item .service-content .service-content__item {
+        margin-top: 1.5em; }
+        .contacts .contacts-content .contacts-content__item .service-content .service-content__item .service-content__title {
+          display: flex;
+          justify-content: space-between;
+          color: #fff;
+          text-transform: capitalize; }
+          .contacts .contacts-content .contacts-content__item .service-content .service-content__item .service-content__title i {
+            padding: 0.5em;
+            background-color: #ff7200;
+            border-radius: 50%;
+            font-size: 0.75em;
+            cursor: pointer; }
+        .contacts .contacts-content .contacts-content__item .service-content .service-content__item .service-content__subtitle {
+          position: relative; }
+          .contacts .contacts-content .contacts-content__item .service-content .service-content__item .service-content__subtitle p {
+            margin: 0.5em 0 1em 0;
+            text-align: justify;
+            color: #acabab; }
+          .contacts .contacts-content .contacts-content__item .service-content .service-content__item .service-content__subtitle::after {
+            content: '';
+            position: absolute;
+            bottom: -1em;
+            width: 100%;
+            left: 0;
+            height: 2px;
+            background-color: #fff; }
+      .contacts .contacts-content .contacts-content__item .contacts-form {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end; }
+        .contacts .contacts-content .contacts-content__item .contacts-form .formcontrol {
+          width: 90%;
+          border-radius: 3px;
+          border: 1px solid #acabab;
+          padding: 10px 0 10px 10px;
+          margin-bottom: 1em;
+          outline-style: none;
+          font-size: 0.9em;
+          box-shadow: none;
+          font-family: 'Open Sans';
+          resize: none; }
+        .contacts .contacts-content .contacts-content__item .contacts-form .contacts-form__button {
+          background-color: #ff7200;
+          border: 1px solid #ff7200;
+          border-radius: 3px;
+          padding: 10px 25px;
+          cursor: pointer; }
+
+footer {
+  background-color: #202020;
+  padding: 1rem 0; }
+  footer .footer-content {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
+    footer .footer-content .left-part {
+      width: 60%;
+      display: flex;
+      align-items: center;
+      justify-content: space-around; }
+      footer .footer-content .left-part .footer-logo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; }
+        footer .footer-content .left-part .footer-logo .footer-logo__title {
+          color: #fff;
+          font-size: 2em;
+          display: block; }
+          footer .footer-content .left-part .footer-logo .footer-logo__title span {
+            font-size: inherit;
+            color: #ff7200; }
+        footer .footer-content .left-part .footer-logo .footer-logo__subtitle {
+          color: #fff;
+          font-size: 1em;
+          text-transform: uppercase; }
+      footer .footer-content .left-part .footer-content__copyright p {
+        color: #fff; }
+    footer .footer-content .rigth-part {
+      width: 30%; }
+      footer .footer-content .rigth-part .footer-menu .footer-menu__item {
+        display: inline-block;
+        padding: 10px; }
+        footer .footer-content .rigth-part .footer-menu .footer-menu__item .footer-menu__link {
+          color: #acabab;
+          text-transform: capitalize; }
+        footer .footer-content .rigth-part .footer-menu .footer-menu__item:hover .footer-menu__link {
+          color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
