--- a/oxxo/scss/style.scss
+++ b/oxxo/scss/style.scss
@@ -52,6 +52,7 @@ ul {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+
   .section__title {
     width: 50%;
 
@@ -731,6 +732,7 @@ ul {
   .howwedo-content {
     display: flex;
     justify-content: space-around;
+    padding-bottom: 5rem;
 
     .howwedo-content__picture {
       width: 40%;
@@ -763,6 +765,7 @@ ul {
 
         .howwedo-content__container {
           width: 90%;
+
           .howwedo-content__title {
             font-size: 1.5em;
             margin-bottom: 1em;
@@ -770,8 +773,278 @@ ul {
 
           .howwedo-content__text {}
         }
+
         &:first-child {
           margin-top: 0;
+        }
+      }
+    }
+  }
+}
+
+.contacts {
+  background-color: #303030;
+
+  .contacts-content {
+    padding-bottom: 2rem;
+    width: 90%;
+    color: #fff;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+
+    .contacts-content__item {
+      width: 20%;
+      margin-top: 2rem;
+
+      .contacts-content__title {
+        color: #fff;
+        font-size: 1.5em;
+        margin-bottom: 1em;
+        text-transform: capitalize;
+
+        i {
+          margin-right: 0.5em;
+        }
+      }
+
+      .contact-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        .contact-info__subtitle {
+          margin-top: 1em;
+          font-size: 0.9em;
+          color: #fff;
+        }
+
+        .contact-info__adress {
+          color: #fff;
+          margin-top: 1em;
+
+          span {
+            color: #fff;
+            display: block;
+          }
+
+          .contact-info__street {
+            color: #acabab;
+          }
+        }
+
+        .contact-info__phone {
+          margin-top: 1em;
+
+          span {
+            color: #fff;
+            display: block;
+          }
+
+          .contact-info__number {
+            color: #acabab;
+          }
+        }
+
+        .contact-info__mail {
+          margin-top: 1em;
+
+          span {
+            display: block;
+            color: #fff;
+          }
+
+          .contact-info__mailadr {
+            color: #acabab;
+          }
+        }
+
+        .contact-info__social {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+          margin-top: 1em;
+
+          .contact-info__icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1em;
+            width: 2.5em;
+            height: 2.5em;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            cursor: pointer;
+
+            .contact-info__link {
+              i {
+                font-size: 1.3em;
+                color: #fff;
+              }
+            }
+
+            &:hover {
+              border: 1px solid $secondary-color;
+
+              .contact-info__link {
+                i {
+                  color: $secondary-color;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .latest-post__item {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-top: 1em;
+        .latest-post__img {
+          width: 45%;
+          margin-right: 1em;
+          display: block;
+        }
+        .latest-post__title {
+          color: #fff;
+          margin-bottom: 0.5em;
+          text-transform: capitalize;
+        }
+        .latest-post__subtitle {
+          color: #acabab;
+          font-size: 0.9em;
+        }
+        .latest-post__date {
+          color: $secondary-color;
+          margin-top: 0.5em;
+        }
+      }
+
+      .service-content {
+        .service-content__item {
+          margin-top: 1.5em;
+          .service-content__title {
+            display: flex;
+            justify-content: space-between;
+            color: #fff;
+            text-transform: capitalize;
+            i {
+              padding: 0.5em;
+              background-color: $secondary-color;
+              border-radius: 50%;
+              font-size: 0.75em;
+              cursor: pointer;
+            }
+          }
+          .service-content__subtitle {
+            position: relative;
+            p {
+              margin: 0.5em 0 1em 0;
+              text-align: justify;
+              color: #acabab;
+            }
+            &::after {
+              content: '';
+              position: absolute;
+              bottom: -1em;
+              width: 100%;
+              left: 0;
+
+              height: 2px;
+              background-color: #fff;
+            }
+          }
+        }
+      }
+
+      .contacts-form {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
+
+        .formcontrol {
+          width: 90%;
+          border-radius: 3px;
+          border: 1px solid #acabab;
+          padding: 10px 0 10px 10px;
+          margin-bottom: 1em;
+          outline-style: none;
+          font-size: 0.9em;
+          box-shadow: none;
+          font-family: 'Open Sans';
+          resize: none;
+        }
+        .contacts-form__button {
+          background-color: $secondary-color;
+          border: 1px solid $secondary-color;
+          border-radius: 3px;
+          padding: 10px 25px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+footer {
+  background-color: #202020;
+  padding: 1rem 0;
+  // height: 100px;
+
+  .footer-content {
+    display: flex;
+    // justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+
+    .left-part {
+      width: 60%;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      .footer-logo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .footer-logo__title {
+          color: #fff;
+          font-size: 2em;
+          display: block;
+          span {
+            font-size: inherit;
+            color: $secondary-color;
+          }
+        }
+
+        .footer-logo__subtitle {
+          color: #fff;
+          font-size: 1em;
+          text-transform: uppercase;
+        }
+      }
+      .footer-content__copyright {
+        p {
+          color: #fff;
+        }
+      }
+    }
+    .rigth-part {
+      width: 30%;
+      .footer-menu {
+        .footer-menu__item {
+          display: inline-block;
+          padding: 10px;
+          .footer-menu__link {
+            color: #acabab;
+            text-transform: capitalize;
+          }
+          &:hover {
+            .footer-menu__link {
+              color: #fff;
+            }
+          }
         }
       }
     }
